# jsonmodem

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  LOG.md  Makefile  README.md  buffer.md  critic.md  critic_proposal.md  critic_todo.md  proposal_a.md  proposal_ab.md  proposal_abc.md  proposal_abcd.md  proposal_b.md  proposal_bc.md  proposal_bcd.md  proposal_bcda.md  proposal_c.md  proposal_cd.md  proposal_cda.md  proposal_cdab.md  proposal_d.md  proposal_da.md  proposal_dab.md  proposal_dabc.md  rustfmt.toml  scanner_proposal.md  scanner_todo.md
.agent/: AGENTS.md  SPECS.md  check-py.sh  check.sh  setup-py.sh  setup.sh
.agent/specs/: jsonmodem-buffers-rewrite.md  jsonmodem-core-buffers-values.md  jsonmodem-core-event-buffer-and-values-adapter-refactor.md  streaming-parser-builder-placement.md
.config/: nextest.toml
.github/workflows/: actionlint.yml  agent-codex-check.yml  benchmarks.yml  ci.yml  flamegraph.yml  fuzz.yml  lint.yml  miri.yml  py.yml  test.yml
crates/jsonmodem/: Cargo.toml
crates/jsonmodem-py/: Cargo.toml  README.md  pyproject.toml
crates/jsonmodem-py/src/: lib.rs  pyfactory.rs  pyvalue.rs
crates/jsonmodem-py/tests/: py_parser.rs  py_scalar.rs  py_streaming_values.rs  rust_exists.rs  test_import.py
crates/jsonmodem/.agent/specs/: jsonmodem-buffers-rewrite.md
crates/jsonmodem/.agents/: LOG.md
crates/jsonmodem/benches/: competitive_benchmarks.rs  parse_partial_json_port.rs  partial_json.rs  partial_json_big.rs  partial_json_common.rs  partial_json_incremental.rs  partial_json_strategies.rs  streaming_json_common.rs  streaming_json_incremental.rs  streaming_json_large.rs  streaming_json_medium.rs  streaming_json_strategies.rs  streaming_parser.rs
crates/jsonmodem/benches/jiter_data/: big.json  response_large.json
crates/jsonmodem/examples/: llm_tool_call.rs
crates/jsonmodem/src/: buffer.rs  chunk_utils.rs  error.rs  escape_buffer.rs  event.rs  event_stack.rs  factory.rs  json_path.rs  jsonmodem.rs  jsonmodem_buffers.rs  jsonmodem_values.rs  lib.rs  literal_buffer.rs  options.rs  parser.rs  path.rs  path_component.rs  streaming_values.rs  value.rs  value_zipper.rs
crates/jsonmodem/src/backend/: mod.rs  raw.rs  rust.rs
crates/jsonmodem/src/buffered/: builders.rs  factory.rs  mod.rs  options.rs  value.rs  value_builder.rs  value_zipper.rs
crates/jsonmodem/src/parser/: buffer.rs  byte_buffer.rs  error.rs  escape_buffer.rs  event_builder.rs  literal_buffer.rs  mod-new.rs  mod.rs  numbers.rs  options.rs  parse_event.rs  path.rs  tests.rs
crates/jsonmodem/src/parser/scanner/: mod.rs  tests.rs
crates/jsonmodem/src/tests/: adapters.rs  arbitrary.rs  buffers_regressions.rs  chunk_helpers.rs  chunk_utils.rs  manual.rs  manual_number.rs  mod.rs  parse_bad.rs  parse_good.rs  property_multivalue.rs  property_partition.rs  repro.rs  snapshot_events.rs  streaming_values_bad.rs  streaming_values_good.rs  utils.rs
crates/jsonmodem/tests/: common.rs  factory_std.rs  snapshots_buffers.rs  snapshots_layers.rs  snapshots_values.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
scripts/: perf_snippet.py
