[package]
name = "jsonmodem"
version = "0.1.2"
edition = "2024"
authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
description = "A streaming, incremental JSON parser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aaronfriel/jsonmodem"
autobenches = false
rust-version = "1.85"

[features]
default = []
fuzzing = []
serde = []
bench = []
comparison = []
pyo3 = ["dep:pyo3"]
bench-fast = []
test-fast = []
# Enabling `miri` pulls in the faster test and benchmark configurations.
miri = ["bench-fast", "test-fast"]

[dependencies]
ouroboros = { version = "0.18.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.25.1", optional = true }
cfg-if = "1.0.1"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
quickcheck = "1.0"
rstest = "0.25.0"
quickcheck_macros = "1.1.0"
is_ci = "1.2.0"
serde_yaml = "0.9.34"
serde_json = "1.0"
criterion = { version = "0.5", features = ["default", "html_reports"] }
jiter = "0.10.0"
paste = "1.0.7"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }

[lints.clippy]
pedantic = "warn"
perf = "deny"
suspicious = "deny"

[[bench]]
name = "streaming_json_strategies"
harness = false

[[bench]]
name = "streaming_json_medium"
harness = false

[[bench]]
name = "streaming_json_large"
harness = false

[[bench]]
name = "streaming_json_incremental"
harness = false

[[bench]]
name = "streaming_parser"
harness = false

[[bench]]
name = "competitive_benchmarks"
harness = false
required-features = ["comparison"]
